Initial implementation for integration to external services with testing included.
